# vnstock_ai_agent

./: .env  main.py  pyproject.toml  web_app.py
app/: __init__.py
app/agent/: advice_service.py  command_router.py  llm_client.py  prompts.py  split_advice_service.py  split_prompts.py
app/memory/: advice_audit.py  hipporag_store.py  numeric_cache.py  performance_tracking.py
app/tools/: market_search.py  news_search.py  quant_score_sys.py  web_search.py
app/utils/: config.py  formatter.py  sentiment_analysis.py
docs/: README.md
migrations/: add_cache_and_audit_tables.py  fix_advice_id_type.py
static/: script.js  style.css
templates/: index.html
vnstock_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
